--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
 		"allowJs": true,
 		"types": [
 			"bun-types" // add Bun global
-		]
+		],
+		"verbatimModuleSyntax": true
 	},
 	"ts-node": {
 		// Tell ts-node CLI to install the --loader automatically
