--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
   "name": "test",
-  "module": "server.js",
+  "module": "server.ts",
   "type": "module",
   "outDir": "./build",
   "rootDir": "./src",
   "devDependencies": {
+    "@types/express": "^4.17.20",
     "bun-types": "latest"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "fastify": "^4.24.2",
-    "fastify-cli": "^5.8.0"
+    "express": "^4.18.2"
   },
   "scripts": {
-    "start": "bun run server.ts"
+    "start": "bun --hot ./src/server.ts"
   }
 }
